--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.13.0",
     "@types/react-slick": "^0.23.13",
     "blo": "^1.2.0",
+    "ethers": "^6.13.4",
     "fa": "^1.0.1",
     "fa6": "^2.0.1",
     "framer-motion": "^11.11.8",
