--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
@@ -30,6 +29,7 @@
       ]
 	  
     },
+    "target": "ES2020",
     "plugins": [
       {
         "name": "next"
