--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-	  
-    ],
-    
+		"lib": ["dom", "dom.iterable", "esnext"],
 	"typeRoots": ["./node_modules/@types"],
   "types": ["node", "react", "next"],
   
