--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-		"lib": ["dom", "dom.iterable", "esnext"],
-	"typeRoots": ["./node_modules/@types"],
-  "types": ["node", "react", "next"],
-  
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "typeRoots": ["./node_modules/@types"],
+    "types": ["node", "react", "next"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -11,17 +10,14 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": "./", // Add this line
+    "baseUrl": "./",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-	  
+      "@/*": ["./src/*"]
     },
     "target": "ES2020",
     "plugins": [
@@ -39,5 +35,4 @@
   "exclude": [
     "node_modules"
   ]
-  
 }
