--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.0.13",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-lazy-load-image-component": "^1.6.2",
