--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@types/react-slick": "^0.23.13",
+    "axios": "^1.7.7",
     "blo": "^1.2.0",
     "ethers": "^6.13.4",
     "fa": "^1.0.1",
