--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fa": "^1.0.1",
     "fa6": "^2.0.1",
     "framer-motion": "^11.11.8",
+    "lodash": "^4.17.21",
     "next": "^14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
