--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-slick": "^0.23.13",
     "axios": "^1.7.7",
     "blo": "^1.2.0",
+    "elliptic": "^6.5.7",
     "ethers": "^6.13.4",
     "fa": "^1.0.1",
     "fa6": "^2.0.1",
